syntax = "proto3";

package fortress;

option go_package = "github.com/Ananto30/go-grpc/proto/fortress";


message Document {
    repeated string list = 1 ;
}

message Campaign {
    string id = 1;
    
    string title = 2;
    string code = 3;
    
    string partner = 4;
    
    double burn_sharing = 5;

    int64 budget = 6;
    string status = 7;
    bool all_users = 8;
    repeated string ties = 9;
    
    int64 created_at = 10;
    int64 updated_at = 11;
}
